--- a/.html
+++ b/.html
@@ -28,6 +28,7 @@
     color: #0d3a34;
     font-weight: 700;
     margin-bottom: 6px;
+    line-height: 1.25;
   }
 
   p.sub {
@@ -227,10 +228,43 @@
     font-size: 1rem;
   }
 
-  @media (max-width: 700px) {
-    .trust-item { flex: 1 1 45%; }
-    #trustBanner h3 { font-size: 1.1rem; }
+  /* ✅ Improved Mobile View */
+  @media (max-width: 600px) {
+    h2 {
+      font-size: 1.4rem;
+      line-height: 1.3;
+      margin-bottom: 4px;
+      word-break: keep-all;
+    }
+
+    p.sub {
+      font-size: 0.85rem;
+      margin-bottom: 14px;
+    }
+
+    #htc {
+      padding: 18px;
+    }
+
+    #gradeSection h3 {
+      font-size: 1.05rem;
+    }
+
+    .form-group label {
+      font-size: 0.85rem;
+    }
+
+    input, select {
+      font-size: 0.9rem;
+      padding: 8px 10px;
+    }
+
+    #calculateBtn {
+      font-size: 15px;
+      padding: 12px;
+    }
   }
+
   @media (max-width: 480px) {
     .trust-item { flex: 1 1 100%; justify-content: center; }
   }
@@ -298,7 +332,6 @@
     <div id="beforeAfter"></div>
   </div>
 
-  <!-- 🌟 Trust Banner moved to bottom -->
   <section id="trustBanner">
     <h3>Why <span style="color:#009345;">1,00,000+</span> People Trust Us</h3>
     <p style="max-width:680px;margin:0 auto 22px;color:#3b4c47;font-size:0.95rem;">
